--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE HTML>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-
 <html>
 	<head>
 		<title>혁신의 시작, 팀 므느으르</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/785829576114176030/872454691181694996/profile_.png">
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+<!--		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />-->
+		<link rel="stylesheet" href="static/css/main.css" />
 	</head>
 	<body class="is-preload">
 
