--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="https://discord.gg/ndWXeH37DS" target="_blank" class="image icon solid fa-signal"><img src="static/images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Official Support</h3>
+							<p>팀 므느으르의 공식 지원 디스코드 서버입니다.<br>팀 므느으르 서비스의 공지사항, 업데이트 현황을 <br>확인하실 수 있으며, 곧 출시될 서비스의 기능을 <br>미리 사용해보실 수 있습니다.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-code"><img src="static/images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>The Second Thing</h3>
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image icon solid fa-mobile-alt"><img src="static/images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>The Third Thing</h3>
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
