--- a/index.html
+++ b/index.html
@@ -246,11 +246,14 @@
 
 			</div>
 
-		<!-- Footer -->
-			<!-- <div id="footer">
-				<div class="container medium">
+		
 
-					<header class="major last">
+		<!-- Footer -->
+			<div id="footer">
+				<div class="container medium">
+					
+					
+					<!-- <header class="major last">
 						<h2>Questions or comments?</h2>
 					</header>
 
@@ -282,14 +285,14 @@
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
+					</ul> -->
 
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</div>
-			</div> -->
+			</div> 
 
 		<!-- Scripts -->
 			<script src="static/js/jquery.min.js"></script>
